--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Queen_Anita-V4",
+  "name": "Danney Bot",
   "version": "4.0.0",
   "description": "A powerful Multi-Device WhatsApp Bot featuring various utilities and media tools.",
   "main": "index.js",
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "David Cyril",
+  "author": "Danney",
   "license": "MIT",
   "dependencies": {
 "@whiskeysockets/baileys": "npm:baileys-x",
